--- a/app/renderer/goals.html
+++ b/app/renderer/goals.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>CashMoo Goals</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; connect-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline';" />
+    <link rel="stylesheet" href="styles/globals.css" />
   </head>
 
   <body>
