--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -1,67 +1,140 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>CashMoo Dashboard</title>
+    <title>CashMoo</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; connect-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline';" />
+    <meta name="description" content="Personal finance dashboard for tracking income, expenses, and financial goals." />
     <link rel="stylesheet" href="styles/globals.css" />
   </head>
 
   <body>
-    <h1>CashMoo</h1>
-    <nav>
-      <a href="index.html">Dashboard</a>
-      <a href="expenses.html">Expenses</a>
-      <a href="incomes.html">Incomes</a>
-      <a href="cards.html">Cards</a>
-      <a href="goals.html">Goals</a>
-      <a href="notifications.html">Notifications</a>
-      <a href="settings.html">Settings</a>
+    <header>
+      <h1>CashMoo</h1>
+      <p>Mooove your money in the right direction.</p>
+    </header>
+
+    <nav role="navigation" aria-label="Main navigation">
+      <ul>
+        <li><a href="index.html" aria-current="page">Dashboard</a></li>
+        <li><a href="expenses.html">Expenses</a></li>
+        <li><a href="incomes.html">Incomes</a></li>
+        <li><a href="cards.html">Cards</a></li>
+        <li><a href="goals.html">Goals</a></li>
+        <li><a href="notifications.html">Notifications</a></li>
+        <li><a href="settings.html">Settings</a></li>
+      </ul>
     </nav>
-    <section id="tutorial" style="display: none">
-      <h2>Getting started</h2>
-      <ol>
-        <li>Add your first income</li>
-        <li>Add your first expense</li>
-        <li>Add your card</li>
-        <li>Set a financial goal</li>
-        <li>Enable notifications</li>
-      </ol>
-    </section>
-    <section id="dashboard" style="display: none">
-      <h2>Balance</h2>
-      <div id="dashboardBalance">0.00</div>
-      <h2>Monthly projection</h2>
-      <div id="dashboardProjection">0.00</div>
-      <h2>Spending distribution</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Type</th>
-            <th>Amount</th>
-          </tr>
-        </thead>
-        <tbody id="dashboardDistributionBody"></tbody>
-      </table>
-      <h2>Health indicators</h2>
-      <div>Saving rate: <span id="healthSavingRate">0%</span></div>
-      <div>Card usage: <span id="healthCreditUse">0%</span></div>
-      <div>Net balance: <span id="healthNetBalance">0.00</span></div>
-      <h2>Cards status</h2>
-      <table>
-        <thead>
-          <tr>
-            <th>Card</th>
-            <th>Limit</th>
-            <th>Used</th>
-            <th>Available</th>
-          </tr>
-        </thead>
-        <tbody id="cardsUsageBody"></tbody>
-      </table>
-      <h2>Suggestions</h2>
-      <ul id="suggestionsList"></ul>
-    </section>
+
+    <main>
+      <section id="tutorial" style="display: none" aria-labelledby="tutorial-heading">
+        <h2 id="tutorial-heading">Welcome to CashMoo!</h2>
+        <p>Get started with your financial journey by following these simple steps. Each step will help you build a complete picture of your finances.</p>
+
+        <ol>
+          <li>
+            <strong>Add your first income</strong>
+            <p>Start by recording your salary, freelance payments, or any other money you receive regularly. This helps track your total earning potential.</p>
+          </li>
+          <li>
+            <strong>Add your first expense</strong>
+            <p>Record your monthly bills, rent, groceries, or any recurring costs. This shows where your money goes each month.</p>
+          </li>
+          <li>
+            <strong>Add your credit card</strong>
+            <p>Register your credit cards with their limits and payment dates. This helps monitor your credit usage and avoid overspending.</p>
+          </li>
+          <li>
+            <strong>Set a financial goal</strong>
+            <p>Define what you want to achieve financially, like saving for vacation or building an emergency fund. Goals keep you motivated!</p>
+          </li>
+          <li>
+            <strong>Enable notifications</strong>
+            <p>Turn on reminders for bill due dates and goal milestones. Never miss a payment or lose track of your progress again.</p>
+          </li>
+        </ol>
+
+        <p><em>Tip: Start with just one item in each category. You can always add more details later as you get comfortable with the app.</em></p>
+      </section>
+
+      <section id="dashboard" style="display: none" aria-labelledby="dashboard-heading">
+        <h2 id="dashboard-heading">Financial Overview</h2>
+        <p>Your complete financial picture at a glance. This dashboard shows your current financial health and helps you make informed decisions.</p>
+
+        <article aria-labelledby="balance-heading">
+          <h3 id="balance-heading">Current Balance</h3>
+          <p>This is your net financial position - total confirmed income minus paid expenses.</p>
+          <div id="dashboardBalance" role="status" aria-live="polite">0.00</div>
+        </article>
+
+        <article aria-labelledby="projection-heading">
+          <h3 id="projection-heading">Monthly Projection</h3>
+          <p>Expected monthly cash flow based on all your recorded income and expenses. A positive number means you're saving money each month.</p>
+          <div id="dashboardProjection" role="status" aria-live="polite">0.00</div>
+        </article>
+
+        <article aria-labelledby="distribution-heading">
+          <h3 id="distribution-heading">Spending Distribution</h3>
+          <p>See how your expenses are distributed across different recurrence types. This helps identify your spending patterns.</p>
+          <table role="table" aria-labelledby="distribution-heading">
+            <thead>
+              <tr>
+                <th scope="col">Recurrence Type</th>
+                <th scope="col">Total Amount</th>
+              </tr>
+            </thead>
+            <tbody id="dashboardDistributionBody">
+              <!-- Dynamic content populated by JavaScript -->
+            </tbody>
+          </table>
+        </article>
+
+        <article aria-labelledby="health-heading">
+          <h3 id="health-heading">Financial Health Indicators</h3>
+          <p>Key metrics that show how well you're managing your finances. Green numbers are good, red numbers need attention.</p>
+          <dl>
+            <dt>Saving Rate</dt>
+            <dd>Percentage of income you're saving each month. Aim for at least 20% for good financial health.</dd>
+            <dd><span id="healthSavingRate" role="status" aria-live="polite">0%</span></dd>
+
+            <dt>Credit Card Usage</dt>
+            <dd>Percentage of your total credit limit currently being used. Keep this below 30% for optimal credit score.</dd>
+            <dd><span id="healthCreditUse" role="status" aria-live="polite">0%</span></dd>
+
+            <dt>Net Balance</dt>
+            <dd>Your overall financial position after all income and expenses are calculated.</dd>
+            <dd><span id="healthNetBalance" role="status" aria-live="polite">0.00</span></dd>
+          </dl>
+        </article>
+
+        <article aria-labelledby="cards-status-heading">
+          <h3 id="cards-status-heading">Credit Cards Status</h3>
+          <p>Monitor your credit card usage to avoid overspending and maintain healthy credit utilization rates.</p>
+          <table role="table" aria-labelledby="cards-status-heading">
+            <thead>
+              <tr>
+                <th scope="col">Card Name</th>
+                <th scope="col">Credit Limit</th>
+                <th scope="col">Currently Used</th>
+                <th scope="col">Available Credit</th>
+              </tr>
+            </thead>
+            <tbody id="cardsUsageBody">
+              <!-- Dynamic content populated by JavaScript -->
+            </tbody>
+          </table>
+        </article>
+
+        <article aria-labelledby="suggestions-heading">
+          <h3 id="suggestions-heading">Personalized Suggestions</h3>
+          <p>Based on your financial data, here are some recommendations to improve your financial health:</p>
+          <ul id="suggestionsList" role="list">
+            <!-- Dynamic content populated by JavaScript -->
+          </ul>
+        </article>
+      </section>
+    </main>
+
     <script src="renderer.js"></script>
   </body>
 </html>
