--- a/app/renderer/notifications.html
+++ b/app/renderer/notifications.html
@@ -1,40 +1,90 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>CashMoo Notifications</title>
+    <title>Notifications</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; connect-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline';" />
+    <meta name="description" content="Configure notification settings for bill reminders and financial goal alerts." />
     <link rel="stylesheet" href="styles/globals.css" />
   </head>
 
   <body>
-    <h1>Notifications</h1>
-    <nav>
-      <a href="index.html">Dashboard</a>
-      <a href="expenses.html">Expenses</a>
-      <a href="incomes.html">Incomes</a>
-      <a href="cards.html">Cards</a>
-      <a href="goals.html">Goals</a>
-      <a href="notifications.html">Notifications</a>
-      <a href="settings.html">Settings</a>
+    <header>
+      <h1>Notification Settings</h1>
+      <p>Stay on top of your finances with smart reminders.</p>
+    </header>
+
+    <nav role="navigation" aria-label="Main navigation">
+      <ul>
+        <li><a href="index.html">Dashboard</a></li>
+        <li><a href="expenses.html">Expenses</a></li>
+        <li><a href="incomes.html">Incomes</a></li>
+        <li><a href="cards.html">Cards</a></li>
+        <li><a href="goals.html">Goals</a></li>
+        <li><a href="notifications.html" aria-current="page">Notifications</a></li>
+        <li><a href="settings.html">Settings</a></li>
+      </ul>
     </nav>
-    <form id="notificationsForm">
-      <div>
-        <label>Enable notifications</label>
-        <input id="notificationsEnabled" type="checkbox" />
-      </div>
-      <div>
-        <label>Alerts for due bills</label>
-        <input id="alertsDue" type="checkbox" />
-      </div>
-      <div>
-        <label>Alerts for goals</label>
-        <input id="alertsGoals" type="checkbox" />
-      </div>
-      <div>Alert days: 7</div>
-      <div id="notificationsError" style="color: red"></div>
-      <button type="submit">Save</button>
-    </form>
+
+    <main>
+      <section aria-labelledby="notifications-heading">
+        <h2 id="notifications-heading">Configure Your Alerts</h2>
+        <p>Never miss a payment or lose track of your financial goals. Configure which notifications you want to receive to stay informed without being overwhelmed.</p>
+
+        <form id="notificationsForm">
+          <fieldset>
+            <legend>Notification Preferences</legend>
+
+            <div class="form-group">
+              <label for="notificationsEnabled">
+                <input id="notificationsEnabled" type="checkbox" />
+                Enable all notifications
+              </label>
+              <p class="help-text">Turn on to receive desktop notifications from CashMoo. You can always adjust specific types below.</p>
+            </div>
+
+            <div class="form-group">
+              <label for="alertsDue">
+                <input id="alertsDue" type="checkbox" />
+                Bill due date reminders
+              </label>
+              <p class="help-text">Get notified about upcoming bill payments to avoid late fees and maintain good payment history.</p>
+            </div>
+
+            <div class="form-group">
+              <label for="alertsGoals">
+                <input id="alertsGoals" type="checkbox" />
+                Financial goal alerts
+              </label>
+              <p class="help-text">Receive updates on your progress toward financial goals and milestone achievements.</p>
+            </div>
+
+            <div class="info-section">
+              <h3>Reminder Schedule</h3>
+              <p><strong>Alert timing:</strong> 7 days in advance</p>
+              <p class="help-text">All notifications are sent 7 days before due dates, giving you plenty of time to prepare and make payments.</p>
+            </div>
+          </fieldset>
+
+          <div class="form-actions">
+            <button type="submit">Save Notification Settings</button>
+          </div>
+
+          <div id="notificationsError" role="alert" aria-live="assertive" style="color: red"></div>
+        </form>
+
+        <section aria-labelledby="notification-tips-heading">
+          <h3 id="notification-tips-heading">How Notifications Work</h3>
+          <ul>
+            <li><strong>Local notifications:</strong> All alerts are generated directly by CashMoo on your computer - no internet connection required.</li>
+            <li><strong>Privacy first:</strong> Your financial data never leaves your device. Notifications are created using your local data only.</li>
+            <li><strong>Bill reminders:</strong> Automatic alerts help you avoid late fees and maintain good payment history, even when you're offline.</li>
+            <li><strong>Goal tracking:</strong> Progress updates keep you motivated toward your financial objectives.</li>
+          </ul>
+        </section>
+      </section>
+    </main>
+
     <script src="renderer.js"></script>
   </body>
 </html>
